# EasyIoT-Template

./: .gitignore  Cargo.toml  README.md
client-app/: Cargo.toml  index.html
client-app/src/: app.rs  connection_manager.rs  home_page.rs  main.rs  settings_page.rs
embedded-app/: Cargo.toml  build.rs
embedded-app/.cargo/: config.toml
embedded-app/src/: main.rs  web.rs  worker.rs
messages/: Cargo.toml
messages/src/: lib.rs
sha1/: Cargo.toml  README.md
sha1/src/: lib.rs
