[package]
name = "client-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
ewebsock = "0.5.0"
messages = { path = "../messages" }
heapless = "0.8.0"
wasm-bindgen = "0.2.92"

# native only depedencies:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web only depedencies:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"


