[package]
name = "embedded-app"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = {version = "0.5.0", features = [ "nightly" ] }

esp-backtrace = { version = "0.11.0", features = [ "esp32", "exception-handler", "panic-handler", "println" ] }
esp-hal = { version = "0.17.0", features = ["esp32", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.5.1", features = ["esp32"] }

log = { version = "0.4.20" }





