[package]
name = "embedded-app"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = {version = "0.5.0", features = ["integrated-timers",  "nightly" ] }
embassy-net = { version = "0.4.0", features = [ "proto-ipv4", "medium-ip", "dhcpv4", "tcp"]}
embassy-time = "0.3.0"
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-sync = "0.5.0"

esp-backtrace = { version = "0.11.0", features = [ "esp32", "exception-handler", "panic-handler", "println" ] }
esp-hal = { version = "0.17.0", features = ["esp32", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.5.1", features = ["esp32", "wifi", "embassy-net", "phy-enable-usb", "utils"] }

log = { version = "0.4.20" }
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
smoltcp = { version = "0.11.0", default-features = false, features = [ 
    "medium-ethernet", 
    "proto-dhcpv4", 
    "proto-igmp", 
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp", 
    "socket-udp",
] } #dependencie for esp-wifi

sha1 ={ path = "../sha1" }
messages = { path = "../messages" }





