[package]
name = "embedded-app"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.1", features = ["esp32", "exception-handler", "panic-handler", "println",]}
esp-hal = { version = "0.21.0", features = ["esp32",] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.5.0" }
esp-wifi = { version = "0.10.1", default-features=false, features = ["esp32", "phy-enable-usb", "utils", "wifi", "wifi-default", "esp-alloc", "log", "async", "embassy-net",] }
esp-hal-embassy  = { version = "0.4.0",  features = ["esp32"] }

embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.6.0",  features = ["task-arena-size-49152",] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
embassy-sync = "0.6.0"
embassy-time-driver = "0.1.0"

log = { version = "0.4.21" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet", "proto-dhcpv4", "proto-igmp", "proto-ipv4", "socket-dhcpv4", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp",] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }

sha1 ={ path = "../sha1" }
messages = { path = "../messages" }


